some comments added

--- a/nb-wp.ipynb
+++ b/nb-wp.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:9c206a139aa9d6c3788011c83bb600fbf3d9a9bd202c8946487dc37d54dea4f8"
+  "signature": "sha256:0ef9d323452aa4e9e9505e04c5e8176d0f6be5b89596f200fee49c419f345f78"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -133,6 +133,7 @@
       "Each title of the plot shows the type of shaping done for the pump pulse, and the power ratio between layers 1 to 20, to layers 30-50.\n",
       "\n",
       "Shaping types:\n",
+      "- \"no shaping\": the pulse is focused outside (left side) the stack\n",
       "- \"positive-wave focusing\": make the 'a_j' complex amplitudes to have the same phase for all eigenmodes at midpoint of the layer\n",
       "- \"total field focusing\": make the total complex field to have the same phase for all eigenmodes, at a location with maximum spatial field magnitude\n",
       "- \"minimization\": randomize phases of the eigenmodes which do not localize in layers we'd like to focus (e.g. randomize those in layer 1 to 20, but not 40)"
