--- a/nb-2PS-A.ipynb
+++ b/nb-2PS-A.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:386e44975fc20c54289f44290fcf7b5cad6ebd40ba0b379956da2c0512585786"
+  "signature": "sha256:120850d5e306ac2fc2a01412857f372a0bebab0fe730620eb7f2d01d0328aaa2"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -105,7 +105,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 2
+     "prompt_number": 1
     },
     {
      "cell_type": "code",
@@ -114,12 +114,13 @@
       "locations = ['200@10/', '200@50/','200@90/','200@125/','200@160/','200@190/']\n",
       "case1 = '1600nm-150nmS-100um-025nm-central/'\n",
       "case2 = '1600nm-100nm-100um-025nm-central/'\n",
-      "case3 = '1600nm-50nm-100um-025nm-central/'"
+      "case3 = '1600nm-50nm-100um-025nm-central/'\n",
+      "case4 = ''"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 8
+     "prompt_number": 3
     },
     {
      "cell_type": "code",
@@ -465,6 +466,13 @@
       "pyplot.plot(xout[1::2],yout[1::2],'o-')\n",
       "pyplot.legend(['even layers','odd layers'],fontsize=22)\n",
       "pyplot.show()\n",
+      "\"\"\"\n",
+      "\"\"\"\n",
+      "Shaping types:\n",
+      "- \"no shaping\": the pulse is focused outside (left side) the stack\n",
+      "- \"positive-wave focusing\": make the 'a_j' complex amplitudes to have the same phase for all eigenmodes at midpoint of the layer\n",
+      "- \"total field focusing\": make the total complex field to have the same phase for all eigenmodes, at a location with maximum spatial field magnitude\n",
+      "- \"minimization\": randomize phases of the eigenmodes which do not localize in layers we'd like to focus (e.g. randomize those in layer 1 to 20, but not 40)\n",
       "\"\"\""
      ],
      "language": "python",
@@ -473,13 +481,21 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 10,
+       "prompt_number": 1,
        "text": [
-        "\"\\nn = 1\\nxout = data[n][:,0]\\nyout = data[n][:,1]\\npyplot.figure(figsize=(18, 4));\\npyplot.xlabel('layer number',fontsize=20)\\npyplot.ylabel('population inversion',fontsize=20)\\npyplot.plot(xout[0::2],yout[0::2],'o-')\\npyplot.plot(xout[1::2],yout[1::2],'o-')\\npyplot.legend(['even layers','odd layers'],fontsize=22)\\npyplot.show()\\n\""
+        "'\\nShaping types:\\n- \"no shaping\": the pulse is focused outside (left side) the stack\\n- \"positive-wave focusing\": make the \\'a_j\\' complex amplitudes to have the same phase for all eigenmodes at midpoint of the layer\\n- \"total field focusing\": make the total complex field to have the same phase for all eigenmodes, at a location with maximum spatial field magnitude\\n- \"minimization\": randomize phases of the eigenmodes which do not localize in layers we\\'d like to focus (e.g. randomize those in layer 1 to 20, but not 40)\\n'"
        ]
       }
      ],
-     "prompt_number": 10
+     "prompt_number": 1
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
     }
    ],
    "metadata": {}
