--- a/nb-corr-A.ipynb
+++ b/nb-corr-A.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:94726af655c38ef0f6c0394c6ace32f5237690506e03012835ec60619c9900d4"
+  "signature": "sha256:2a838468415f12d5f48eee5f9f523fca01ab3d2f61615f9874e94ff451b2ca93"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -233,7 +233,7 @@
       "<br/>\n",
       "\n",
       "<font size=\"4.5\">\n",
-      "This is the case when I used 300 micron air gaps. You can see the \"true periodicity length\" encompasses 3 sub-passbands, and the smallest passbands are ~2.5nm.\n",
+      "Below is the case when I used 300 micron air gaps. You can see the \"true periodicity length\" encompasses 3 sub-passbands, and the smallest passbands are ~2.5nm.\n",
       "</font>\n",
       "\n",
       "<br/>"
