--- a/stack/nb-corr-A.ipynb
+++ b/stack/nb-corr-A.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:2a838468415f12d5f48eee5f9f523fca01ab3d2f61615f9874e94ff451b2ca93"
+  "signature": "sha256:8d3651c88a2e92c336a1f96edaebfeb8b929d7103438e96365e057fc29491cbf"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -12,10 +12,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "<font size=\"4\">\n",
-      "<p> Hi Valery, </p>\n",
-      "\n",
-      "<p> What I've done here is to show how the thickness of air layers changes the photonic bands of the stack. And I believe that, ultimately, the photonic band structure is what controls our focusing ability.</p>\n",
+      "<p> Here is to show how the thickness of air layers changes the photonic bands of the stack. And I believe that, ultimately, the photonic band structure is what controls our focusing ability.</p>\n",
       "\n",
       "<p> The following are 6 stack samples with <i>no thickness variation</i> in either type of layers. This is to show the bands more clearly. When there's significant variation, periodic structures are expected to follow these bands.</p>\n",
       "\n",
